--- a/core/templates/core/feedback_view.html
+++ b/core/templates/core/feedback_view.html
@@ -32,7 +32,7 @@
             </div>
             {% endfor %}
         </div>
-        <a href="{% url 'core_app:feed_back' %}" class="primary-btn" style="margin-top: 27px; margin-left: -12px;">SEND YOUR FEEDBACK HERE</a>
+        <p class="primary-btn" style="margin-top: 27px; margin-left: 364px;">SEND YOUR FEEDBACK HERE</p>
     </div>
 </section>
 <div class="container" style="margin-top: 20px; margin-left: 400px;" >
