--- a/order/templates/order/order_details.html
+++ b/order/templates/order/order_details.html
@@ -1,42 +1,61 @@
 {% extends 'homepage/base.html' %} {% load thumbnail %} {% block title %} Order no - {{order.id}} {% endblock title %} {% block content %}
-<h2 class="mt-4">Order ID - {{order.id}}</h2>
-{% comment %}
-<h4 class="font-weight-light">
-    {{order.user.first_name|default:order.user.username}} {{order.user.last_name}}
-</h4>
-{% endcomment %}
-<h4>
-    {% if order.paid %}
-    <span class="badge badge-success">Paid</span> {% else %}
-    <span class="badge badge-danger">đang chờ thanh toán</span> {% endif %}
-</h4>
-<h5 class="font-weight-light">
-    Address - {{order.address}}, {{order.city}}, {{order.pin_code}}
-</h5>
-<h5 class="font-weight-light">Trạng thái - {{order.status}}</h5>
-<h5 class="font-weight-light">Thời gian - {{order.created}}</h5>
-<h3 class="font-weight-light mt-4">Product</h3>
-<ul class="list-group shadow-sm">
-    {% for o in order.items.all %}
-    <li class="list-group-item d-flex align-items-center justify-content-between flex-column flex-md-row">
-        <div class="d-flex align-items-center">
-            <img src="{{ o.product.product_img.url }}" alt="{{o.product.title}}" class="img-fluid" />
-            <h5 class="ml-3 mb-0 font-weight-light">
-                <a href="{% url 'product_app:details' o.product.id %}">{{o.product.title}}</a>
-            </h5>
+<div class="container-xl">
+    <div class="d-flex flex-column justify-content-center align-items-center" id="order-heading">
+        <div class="text-uppercase">
+            <p>Order ID - {{order.id}}</p>
         </div>
-        <h5 class="font-weight-light mb-0">
-            {{o.product.price}}VNĐ * {{o.quantity}} = <b>{{o.total}}VNĐ</b>
-        </h5>
-    </li>
-    {% endfor %}
-    <li class="list-group-item bg-primary text-white">
-        <h5 class="mb-0 text-right font-weight-light">
-            Total - <b>{{order.total_price}}VNĐ</b>
-        </h5>
-    </li>
-</ul>
+        <div class="h4">Thời gian - {{order.created}}</div>
+        <div class="pt-1">
+            <p>Address - {{order.address}}, {{order.city}}, {{order.pin_code}}<b class="text-dark"> Trạng thái - {{order.status}}</b></p>
+        </div>
+        {% comment %}
+    <h4 class="font-weight-light">
+        {{order.user.first_name|default:order.user.username}} {{order.user.last_name}}
+    </h4>
+    {% endcomment %}
+    <h4>
+        {% if order.paid %}
+        <span class="badge badge-success">Paid</span> {% else %}
+        <span class="badge badge-danger">đang chờ thanh toán</span> {% endif %}
+    </h4>
+        <div class="btn close text-white"> &times; </div>
+        
+    
+    </div>
+
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>Product</th>
+                <th>Gia Tien</th>
+                <th>So luong</th>						
+                <th>Thanh tien</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for o in order.items.all %}
+            <tr>
+                <div class="d-flex align-items-center">
+                    <td><img style="width: 110px; height: 110px;" src="{{ o.product.product_img.url }}" alt="{{o.product.title}}" class="img-fluid" />
+                        <a href="{% url 'product_app:details' o.product.id %}">{{o.product.title}}</a>
+                    </td>
+                    
+                    <td>{{o.product.price}}VNĐ</td>
+                    <td>{{o.quantity}}</td>
+                    <td>{{o.total}}VNĐ</td>
+                </div>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <div class="d-flex justify-content-start align-items-center pl-3 py-3 mb-4 border-bottom">
+        <div class="text-muted"> <b>Total:</b> </div>
+        <div class="ml-auto h5"> {{order.total_price}}VNĐ <pre>                       </pre> </div>
+    </div>
+    
+
 <p class="my-2 text-center">
     <a href="{{order.get_absolute_url}}" class="btn btn-success">Invoice</a>
 </p>
+</div>
 {% endblock content %}
