--- a/order/templates/order/order_list.html
+++ b/order/templates/order/order_list.html
@@ -1,5 +1,15 @@
 {% extends 'homepage/base.html' %} {% block title %}AHA | Your Orders{% endblock title %} {% block content %}
-<h1 class="font-weight-light mt-3">Your Orders</h1>
+<div class="container-xl">
+    <div class="d-flex flex-column justify-content-center align-items-center" id="order-heading">
+        <div class="text-uppercase">
+            <h1 class="font-weight-light mt-3">Your Orders</h1>
+        </div>
+        <!-- <div class="h4">Thời gian - {{order.created}}</div>
+        <div class="pt-1">
+            <p>Address - {{order.address}}, {{order.city}}, {{order.pin_code}}<b class="text-dark"> Trạng thái - {{order.status}}</b></p>
+        </div> -->
+    </div>
+    <!-- <h1 class="font-weight-light mt-3">Your Orders</h1> -->
 <hr />
 <ul class="list-group my-3">
     {% for order in orders %}
@@ -49,4 +59,5 @@
         {% endif %}
     </ul>
 </nav>
+</div>
 {% endwith %} {% endblock content %}
